--- a/Sass_pro/scss/incio_productos.css
+++ b/Sass_pro/scss/incio_productos.css
@@ -21,6 +21,9 @@
       justify-content: space-around;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   overflow: hidden;
 }
 
@@ -29,8 +32,6 @@
   height: -moz-fit-content;
   height: fit-content;
   text-align: center;
-  -webkit-box-shadow: 3px 3px 5px #e5e7e9;
-          box-shadow: 3px 3px 5px #e5e7e9;
   position: relative;
   width: 30%;
 }
@@ -41,7 +42,8 @@
 }
 
 .foto-galeria-1 {
-  width: 100%;
+  width: 80%;
+  height: 60vh;
 }
 
 .title_galeria {
@@ -62,12 +64,6 @@
   font-size: 3vh;
   margin-left: 3vh;
   display: inline-block;
-  color: var(--letra-gris);
-}
-
-.buttom__galery {
-  font-size: 2vh;
-  font-family: "Mulish", sans-serif;
   color: var(--letra-gris);
 }
 
@@ -92,18 +88,27 @@
   font-size: 2.5vh;
 }
 
+.buttom__galery {
+  font-size: 2vh;
+  font-family: "Mulish", sans-serif;
+  color: var(--letra-negra);
+}
+
 .carrto__comprar {
-  top: 78%;
-  display: none;
+  top: 70.5%;
+  left: 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100%;
-  height: 0%;
-  background-color: #ebedef;
-  opacity: 0.6;
+  width: 70%;
+  height: 50%;
+  background-color: white;
+  opacity: 1;
   cursor: pointer;
   height: 10%;
   position: absolute;
@@ -119,12 +124,12 @@
   background: transparent;
   border: none;
   opacity: 1;
-  font-size: 4vh;
+  font-size: 3vh;
   overflow: hidden;
 }
 
 .carrto__comprar i {
-  font-size: 5vh;
+  font-size: 3vh;
   opacity: 1;
   z-index: 1000;
 }
