--- a/Sass_pro/scss/incio_productos.scss
+++ b/Sass_pro/scss/incio_productos.scss
@@ -8,12 +8,13 @@
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
+  align-items: center;
   overflow: hidden;
 }
 .foto_product {
   height: fit-content;
   text-align: center;
-  box-shadow: 3px 3px 5px #e5e7e9;
+
   position: relative;
   width: 30%;
 }
@@ -23,7 +24,8 @@
 }
 
 .foto-galeria-1 {
-  width: 100%;
+  width: 80%;
+  height: 60vh;
 }
 .title_galeria {
   font-size: 1.275rem;
@@ -43,11 +45,7 @@
   display: inline-block;
   color: var(--letra-gris);
 }
-.buttom__galery {
-  font-size: 2vh;
-  font-family: "Mulish", sans-serif;
-  color: var(--letra-gris);
-}
+
 .carrLog {
   margin-left: 5vh;
 }
@@ -64,15 +62,21 @@
 .off_porciento p {
   font-size: 2.5vh;
 }
+.buttom__galery {
+  font-size: 2vh;
+  font-family: "Mulish", sans-serif;
+  color: var(--letra-negra);
+}
 .carrto__comprar {
-  top: 78%;
-  display: none;
+  top: 70.5%;
+  left: 15%;
+  display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 100%;
-  height: 0%;
-  background-color: #ebedef;
-  opacity: 0.6;
+  width: 70%;
+  height: 50%;
+  background-color: white;
+  opacity: 1;
   cursor: pointer;
   height: 10%;
   position: absolute;
@@ -83,11 +87,11 @@
   background: transparent;
   border: none;
   opacity: 1;
-  font-size: 4vh;
+  font-size: 3vh;
   overflow: hidden;
 }
 .carrto__comprar i {
-  font-size: 5vh;
+  font-size: 3vh;
   opacity: 1;
   z-index: 1000;
 }
