--- a/Sass_pro/scss/muestra_product_formu.css
+++ b/Sass_pro/scss/muestra_product_formu.css
@@ -33,6 +33,12 @@
   padding: 4vh;
 }
 
+.img_muestra_p {
+  max-width: 381px;
+  height: 576px;
+  /*   box-shadow: 10px 10px 10px 10px; */
+}
+
 .title_formu_info {
   font-size: 4vh;
   display: inline-block;
@@ -42,6 +48,7 @@
 
 .off_porciento {
   display: inline-block;
+  margin-left: 9%;
 }
 
 .precio_original {
