--- a/Sass_pro/scss/practica.css
+++ b/Sass_pro/scss/practica.css
@@ -1307,6 +1307,12 @@ a {
   padding: 4vh;
 }
 
+.img_muestra_p {
+  max-width: 381px;
+  height: 576px;
+  /*   box-shadow: 10px 10px 10px 10px; */
+}
+
 .title_formu_info {
   font-size: 4vh;
   display: inline-block;
@@ -1316,6 +1322,7 @@ a {
 
 .off_porciento {
   display: inline-block;
+  margin-left: 9%;
 }
 
 .precio_original {
@@ -3345,6 +3352,7 @@ th {
     width: 100%;
     height: 26vh;
     overflow: hidden;
+    overflow-y: auto;
     -webkit-box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
             box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
     display: -webkit-box;
@@ -3530,29 +3538,9 @@ th {
     position: fixed;
     width: 100%;
     background: transparent;
-    display: none;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-  }
-  .seccionCarCambio {
-    height: 100vh;
-    position: fixed;
-    width: 100%;
-    background: transparent;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -3562,6 +3550,16 @@ th {
     top: 0;
     left: 0;
     z-index: 1000;
+    -webkit-transform: translate(0%, -200%);
+            transform: translate(0%, -200%);
+    -webkit-transition: -webkit-transform 0.8s ease;
+    transition: -webkit-transform 0.8s ease;
+    transition: transform 0.8s ease;
+    transition: transform 0.8s ease, -webkit-transform 0.8s ease;
+  }
+  .seccionCarCambio {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
   }
   .contaner_con_modal {
     display: -webkit-box;
@@ -3574,7 +3572,7 @@ th {
         -ms-flex-align: center;
             align-items: center;
     width: 60vh;
-    background: #c0baba;
+    background: transparent;
     height: 100%;
     z-index: 1500;
   }
@@ -3594,9 +3592,6 @@ th {
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
     margin: auto;
-  }
-  .containe_carrito_modal :target {
-    display: block;
   }
   .table_carr_modal {
     position: relative;
@@ -3638,15 +3633,6 @@ th {
   .titlee {
     font-family: "Mulish", sans-serif;
     font-size: 1.3vh;
-  }
-  .containe_carrito_modal.containe_modalCambio {
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    height: 30vh;
-    background: #181414;
-    display: block;
-    position: relative;
   }
   .button_cerrar_modal {
     font-size: 2vh;
