--- a/Sass_pro/scss/queryProduct.css
+++ b/Sass_pro/scss/queryProduct.css
@@ -100,6 +100,7 @@
     width: 100%;
     height: 26vh;
     overflow: hidden;
+    overflow-y: auto;
     -webkit-box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
             box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
     display: -webkit-box;
@@ -285,29 +286,9 @@
     position: fixed;
     width: 100%;
     background: transparent;
-    display: none;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-  }
-  .seccionCarCambio {
-    height: 100vh;
-    position: fixed;
-    width: 100%;
-    background: transparent;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -317,6 +298,16 @@
     top: 0;
     left: 0;
     z-index: 1000;
+    -webkit-transform: translate(0%, -200%);
+            transform: translate(0%, -200%);
+    -webkit-transition: -webkit-transform 0.8s ease;
+    transition: -webkit-transform 0.8s ease;
+    transition: transform 0.8s ease;
+    transition: transform 0.8s ease, -webkit-transform 0.8s ease;
+  }
+  .seccionCarCambio {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
   }
   .contaner_con_modal {
     display: -webkit-box;
@@ -329,7 +320,7 @@
         -ms-flex-align: center;
             align-items: center;
     width: 60vh;
-    background: #c0baba;
+    background: transparent;
     height: 100%;
     z-index: 1500;
   }
@@ -349,9 +340,6 @@
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
     margin: auto;
-  }
-  .containe_carrito_modal :target {
-    display: block;
   }
   .table_carr_modal {
     position: relative;
@@ -393,15 +381,6 @@
   .titlee {
     font-family: "Mulish", sans-serif;
     font-size: 1.3vh;
-  }
-  .containe_carrito_modal.containe_modalCambio {
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    height: 30vh;
-    background: #181414;
-    display: block;
-    position: relative;
   }
   .button_cerrar_modal {
     font-size: 2vh;
