--- a/Sass_pro/scss/queryProduct.scss
+++ b/Sass_pro/scss/queryProduct.scss
@@ -82,6 +82,7 @@
     width: 100%;
     height: 26vh;
     overflow: hidden;
+    overflow-y: auto;
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),
       0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
     display: flex;
@@ -226,32 +227,24 @@
     position: fixed;
     width: 100%;
     background: transparent;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     top: 0;
     left: 0;
     z-index: 1000;
+    transform: translate(0%, -200%);
+    transition: transform 0.8s ease;
   }
   .seccionCarCambio {
-    height: 100vh;
-    position: fixed;
-    width: 100%;
-    background: transparent;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    top: 0;
-    left: 0;
-    z-index: 1000;
+    transform: translate(0%, 0%);
   }
   .contaner_con_modal {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 60vh;
-    background: rgb(192, 186, 186);
+    background: transparent;
     height: 100%;
     z-index: 1500;
   }
@@ -266,10 +259,6 @@
 
     justify-content: space-evenly;
     margin: auto;
-  }
-
-  .containe_carrito_modal :target {
-    display: block;
   }
   .table_carr_modal {
     position: relative;
@@ -299,13 +288,6 @@
   .titlee {
     font-family: "Mulish", sans-serif;
     font-size: 1.3vh;
-  }
-  .containe_carrito_modal.containe_modalCambio {
-    width: fit-content;
-    height: 30vh;
-    background: rgb(24, 20, 20);
-    display: block;
-    position: relative;
   }
   .button_cerrar_modal {
     font-size: 2vh;
