--- a/Sass_pro/scss/_carrito.scss
+++ b/Sass_pro/scss/_carrito.scss
@@ -1,5 +1,6 @@
 .body_carr {
   display: grid;
+  background-color: #f4f4f4;
   grid-template-rows: 15vh 110vh 60vh 70vh;
   grid-template-columns: 1fr 1fr;
   grid-template-areas:
@@ -20,29 +21,46 @@
 }
 
 .container_carrito {
-  height: 90%;
-  width: 90%;
+  height: 27%;
+  width: 35%;
   margin: auto;
-  border: 1px solid #bfbfbf;
+  border: 1px solid black;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
 }
-.table_carr {
-  margin-top: 10vh;
-  width: 98%;
-  height: 40%;
-  border: 1px solid #bfbfbf;
+.contain_img_esp {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.contain_deleteCarr {
+  height: 100%;
+  width: 20%;
+  background-color: burlywood;
   text-align: center;
 }
-.table_carr tr :nth-child(1) {
-  width: 20vh;
+.deleteCarr {
+  border: 1px solid black;
+
+  font-size: 4vh;
 }
-.table_carr tr > th {
-  font-size: 2vh;
-  width: 5vh;
-  height: 5vh;
-  border-bottom: 2px solid blueviolet;
+.especificaciones {
+  margin: 2vh;
+  text-align: center;
+}
+.imagenPagCarr {
+  box-shadow: 2px 2px 2px;
+  width: 40%;
+  height: 50%;
+}
+.nombre_esp {
+  font-size: 3vh;
+  color: black;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .titleCarrito {
   font-size: 7vh;
