--- a/Sass_pro/scss/practica.css
+++ b/Sass_pro/scss/practica.css
@@ -143,7 +143,7 @@ a {
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 115vh 135vh 90vh 90vh 120vh 50vh 80vh;
   grid-template-rows: 45% 12% 80% 50% 22% 32%;
-      grid-template-areas: "portada portada-2" "contain_title_ofert  contain_title_ofert" "containPrincipal  containPrincipal" "secciones secciones" "ant-foot ant-foot" "footer footer";
+      grid-template-areas: "portada portada-2" "contain_title_ofert  contain_title_ofert" "containPrincipal  containPrincipal" "secciones secciones" "ant-foot ant-foot" "footer footer";
 }
 .containPrincipal {
   -ms-grid-row: 3;
@@ -2511,6 +2511,7 @@ td {
 .body_carr {
   display: -ms-grid;
   display: grid;
+  background-color: #f4f4f4;
   -ms-grid-rows: 15vh 110vh 60vh 70vh;
       grid-template-rows: 15vh 110vh 60vh 70vh;
   -ms-grid-columns: 1fr 1fr;
@@ -2541,10 +2542,10 @@ td {
 }
 
 .container_carrito {
-  height: 90%;
-  width: 90%;
+  height: 27%;
+  width: 35%;
   margin: auto;
-  border: 1px solid #bfbfbf;
+  border: 1px solid black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2552,28 +2553,57 @@ td {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
-.table_carr {
-  margin-top: 10vh;
-  width: 98%;
-  height: 40%;
-  border: 1px solid #bfbfbf;
+.contain_img_esp {
+  width: 50%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.contain_deleteCarr {
+  height: 100%;
+  width: 20%;
+  background-color: burlywood;
   text-align: center;
 }
 
-.table_carr tr :nth-child(1) {
-  width: 20vh;
+.deleteCarr {
+  border: 1px solid black;
+  font-size: 4vh;
 }
 
-.table_carr tr > th {
-  font-size: 2vh;
-  width: 5vh;
-  height: 5vh;
-  border-bottom: 2px solid blueviolet;
+.especificaciones {
+  margin: 2vh;
+  text-align: center;
+}
+
+.imagenPagCarr {
+  -webkit-box-shadow: 2px 2px 2px;
+          box-shadow: 2px 2px 2px;
+  width: 40%;
+  height: 50%;
+}
+
+.nombre_esp {
+  font-size: 3vh;
+  color: black;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .titleCarrito {
