--- a/Sass_pro/scss/_carrito.scss
+++ b/Sass_pro/scss/_carrito.scss
@@ -5,7 +5,7 @@
   grid-template-columns: 1fr 1fr;
   grid-template-areas:
     "separador   separador"
-    "tablaCarrito   tablaCarrito"
+    "tablaCarrito   TotalCompra"
     "suma_de_precios   suma_de_precios"
     "footer    footer";
 }
@@ -14,6 +14,10 @@
 }
 .tablaCarrito {
   grid-area: tablaCarrito;
+  border: 1px solid black;
+}
+.TotalCompra {
+  border: 1px solid violet;
 }
 .suma_de_precios {
   grid-area: suma_de_precios;
@@ -22,41 +26,67 @@
 
 .container_carrito {
   height: 27%;
-  width: 35%;
+  width: 85%;
   margin: auto;
   border: 1px solid black;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-around;
+}
+.especificaciones {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  text-align: start;
+  border: 1px solid rebeccapurple;
+}
+
+.nombre_esp {
+  margin: 2px;
+  font-size: 135%;
+  font-family: "Roboto", sans-serif;
+}
+.esp_esp {
+  margin: 2vh;
+  font-size: 100%;
+}
+.precio_esp {
+  margin: 2vh;
+  font-size: 120%;
 }
 .contain_img_esp {
-  width: 50%;
+  width: 20%;
   height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 .contain_deleteCarr {
   height: 100%;
   width: 20%;
-  background-color: burlywood;
+  background-color: transparent;
   text-align: center;
+  display: flex;
+  align-items: center;
 }
 .deleteCarr {
-  border: 1px solid black;
+  border: 1px solid rgb(66, 65, 65);
+  border-radius: 50%;
+  background-color: rgb(211, 207, 200);
+  margin: auto;
+  width: 40px;
+  height: 40px;
+  font-size: 3vh;
+}
 
-  font-size: 4vh;
-}
-.especificaciones {
-  margin: 2vh;
-  text-align: center;
-}
 .imagenPagCarr {
   box-shadow: 2px 2px 2px;
-  width: 40%;
-  height: 50%;
+  width: 120px;
+  height: 100px;
 }
+
 .nombre_esp {
   font-size: 3vh;
   color: black;
