--- a/Sass_pro/scss/_carrito.scss
+++ b/Sass_pro/scss/_carrito.scss
@@ -1,23 +1,29 @@
 .body_carr {
   display: grid;
   background-color: #f4f4f4;
-  grid-template-rows: 15vh 110vh 60vh 70vh;
+  grid-template-rows: 15vh 110vh 60vh 90vh;
   grid-template-columns: 1fr 1fr;
   grid-template-areas:
     "separador   separador"
-    "tablaCarrito   TotalCompra"
+    "tablaCarrito TotalCompra "
     "suma_de_precios   suma_de_precios"
     "footer    footer";
 }
 .separador {
   grid-area: separador;
 }
+.TotalCompra {
+  grid-area: TotalCompra;
+}
 .tablaCarrito {
   grid-area: tablaCarrito;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  overflow-y: auto;
+  align-items: center;
+  justify-content: space-evenly;
   border: 1px solid black;
-}
-.TotalCompra {
-  border: 1px solid violet;
 }
 .suma_de_precios {
   grid-area: suma_de_precios;
@@ -25,10 +31,10 @@
 }
 
 .container_carrito {
-  height: 27%;
+  height: 30vh;
   width: 85%;
-  margin: auto;
-  border: 1px solid black;
+  margin: 2vh;
+  box-shadow: 2px 2px 2px 2px rgb(114, 110, 110);
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -39,12 +45,11 @@
   align-items: flex-start;
   justify-content: center;
   text-align: start;
-  border: 1px solid rebeccapurple;
 }
 
 .nombre_esp {
   margin: 2px;
-  font-size: 135%;
+  font-size: 20px;
   font-family: "Roboto", sans-serif;
 }
 .esp_esp {
@@ -83,15 +88,10 @@
 
 .imagenPagCarr {
   box-shadow: 2px 2px 2px;
-  width: 120px;
-  height: 100px;
+  width: 150px;
+  height: 140px;
 }
 
-.nombre_esp {
-  font-size: 3vh;
-  color: black;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
 .titleCarrito {
   font-size: 7vh;
   margin: 2vh;
@@ -112,4 +112,17 @@
 }
 .td_buttom {
   width: 1vh;
+}
+.container_carrito_principal {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  border: 1px solid blue;
+  overflow-y: auto;
+}
+.container_carrito_cambio {
+  display: none;
 }
