--- a/Sass_pro/scss/_carrito.scss
+++ b/Sass_pro/scss/_carrito.scss
@@ -5,15 +5,12 @@
   grid-template-columns: 1fr 1fr;
   grid-template-areas:
     "separador   separador"
-    "tablaCarrito TotalCompra "
+    "tablaCarrito tablaCarrito "
     "suma_de_precios   suma_de_precios"
     "footer    footer";
 }
 .separador {
   grid-area: separador;
-}
-.TotalCompra {
-  grid-area: TotalCompra;
 }
 .tablaCarrito {
   grid-area: tablaCarrito;
@@ -21,20 +18,68 @@
   flex-direction: column;
   flex-wrap: nowrap;
   overflow-y: auto;
+  overflow-x: hidden;
   align-items: center;
   justify-content: space-evenly;
-  border: 1px solid black;
 }
 .suma_de_precios {
   grid-area: suma_de_precios;
   background-color: #646464;
 }
-
+.contain_principal {
+  display: flex;
+  height: 98%;
+  width: 80%;
+  border: 1px solid red;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.container_carr_segun {
+  border: 1px solid blue;
+  width: 70vh;
+  height: 100vh;
+}
+.sumatoriaCarr {
+  width: 55vh;
+  height: 45%;
+  border: 1px solid rebeccapurple;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.sumatoriaCarr ul {
+  border: 1px solid black;
+  height: 25vh;
+  width: 40vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+.sumatoriaCarr ul li {
+  list-style: none;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.sumatoriaCarr ul :nth-child(1) span {
+  font-size: 3vh;
+  color: #2b2828;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+.sumatoriaCarr ul li span {
+  font-size: 2.5vh;
+  color: #2b2828;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
 .container_carrito {
-  height: 30vh;
-  width: 85%;
+  height: 25vh;
+  width: 38%;
   margin: 2vh;
-  box-shadow: 2px 2px 2px 2px rgb(114, 110, 110);
+  box-shadow: 2px 2px 2px 2px rgb(231, 226, 226);
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -76,6 +121,7 @@
   display: flex;
   align-items: center;
 }
+
 .deleteCarr {
   border: 1px solid rgb(66, 65, 65);
   border-radius: 50%;
@@ -85,7 +131,12 @@
   height: 40px;
   font-size: 3vh;
 }
-
+.container_PrinCam {
+  display: none;
+  position: absolute;
+  opacity: 0;
+  z-index: -1000;
+}
 .imagenPagCarr {
   box-shadow: 2px 2px 2px;
   width: 150px;
@@ -125,4 +176,36 @@
 }
 .container_carrito_cambio {
   display: none;
+}
+//no carr
+.noCarr {
+  width: 100%;
+  height: 80%;
+  display: none;
+}
+.noCarrCambio {
+  display: block;
+}
+.containNoCarr {
+  background-color: white;
+  border: 1px solid rgb(167, 162, 162);
+  border-radius: 10px 10px 10px 10px;
+  width: 60%;
+  height: 50%;
+  margin: auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.containNoCarr h3 {
+  font-size: 130%;
+  color: #2b2828;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.containNoCarr p {
+  font-size: 110%;
+  color: #2b2828;
+  font-family: Arial, Helvetica, sans-serif;
 }
